# video_search_desktop

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  README.md  UI-DOCUMENTATION.md  main.py  nivel3_pipeline.html  pyproject.toml
.claude/: settings.local.json
core/: database.py  frame_extractor.py  gpu_utils.py  indexer.py  logger.py  model_manager.py  model_registry.py  searcher.py  stream_capture.py
core/alerts/: __init__.py  alert_manager.py  base_notifier.py  telegram_notifier.py
core/describers/: base_describer.py  moondream_describer.py  qwen_describer.py
core/detectors/: base_detector.py  yolo_detector.py
core/embedders/: base_embedder.py  clip_embedder.py
core/events/: __init__.py  event_bus.py
core/export/: __init__.py  base_exporter.py  evidence_exporter.py  pdf_reporter.py
core/ocr/: __init__.py  base_ocr.py  plate_ocr.py
core/recognition/: __init__.py  base_recognizer.py  face_recognizer.py
core/tamper/: __init__.py  base_tamper_detector.py  black_screen_detector.py  scene_change_detector.py  tamper_manager.py
models/: __init__.py  camera.py  database.py  detection.py  event.py  frame.py  gpu.py  indexing.py  models_ai.py  search.py  settings.py  video.py
ui/: base_widget.py  main_window.py  theme.py
ui/widgets/: alert_badge.py  camera_panel.py  event_history_panel.py  gpu_monitor.py  indexing_panel.py  model_card.py  model_panel.py  progress_group.py  result_card.py  result_detail.py  result_gallery.py  search_filter_bar.py  search_panel.py  sidebar.py  stats_panel.py  video_selector.py
ui/workers/: base_worker.py  index_worker.py  model_download_worker.py  model_load_worker.py  search_worker.py  stream_worker.py
