[project]
name = "video-search-desktop"
version = "2.0.0"
description = "Busqueda visual en videos de seguridad por lenguaje natural"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Video Search Team" },
]

dependencies = [
    "PySide6>=6.8",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "Pillow>=11.0",
    "numpy>=1.26",
    "torch>=2.5",
    "torchvision>=0.20",
    "sentence-transformers>=3.3",
    "transformers>=4.46",
    "bitsandbytes>=0.44",
    "accelerate>=1.2",
    "qwen-vl-utils>=0.0.8",
    "chromadb>=1.5.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "nvidia-ml-py>=12.560",
    "python-dotenv>=1.0",
]

[project.scripts]
video-search = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "ui"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
